fixed some spacing issues

--- a/beta/static/style.css
+++ b/beta/static/style.css
@@ -129,7 +129,7 @@ h1 {
 
 a {
     text-decoration: none;
-    padding: 10px;
+    padding-right: 20px;
     color:#696643;
 }
 
